Fixes #492- Too much whitespace in End Event rendering

--- a/src/material-theme.scss
+++ b/src/material-theme.scss
@@ -25,6 +25,24 @@
     border-bottom: 1px solid $brand-gray-light;
   }
 
+  .mat-typography {
+    .mat-display-2 {
+      margin: 0 0 18px;
+    }
+
+    h2 {
+      margin-bottom: 14px;
+    }
+
+    h3 {
+      margin-bottom: 7px;
+    }
+
+    h4 {
+      margin-bottom: 3px;
+    }
+  }
+
   mat-radio-button, .mat-checkbox {
     padding-right: 16px;
   }
